--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             <h1>Carlos Canal</h1>
             <h2>Tecnico Informatico - Especializado en Programacion</h2>
             <div class="redes">
-                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://twitter.com/1kyox"><i class="fa-brands fa-twitter"></i></a>
+                <a href="https://www.instagram.com/carlos.gabriel.04/"><i class="fa-brands fa-instagram"></i></a>
             </div>
         </div>
     </section>
@@ -184,7 +184,7 @@
         </div>
         <main>
             <div class="boton col-lg-12 ">
-                <button>  <SPAN><a width="80px" href="imgs/WeimannJoaquin.pdf" download="CV-WeimannJoaquin" style="text-decoration: none ;"> Descargar CV </a></SPAN></button>
+                <button>  <SPAN><a width="80px" href="E:\mi-primer-repositorio-de-git\imagenes\CurriculumVitae.pdf" download="CV-CarlosCanal" style="text-decoration: none ;"> Descargar CV </a></SPAN></button>
                  </div> 
         </main>
     </section>
