--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
     </section>
 
     <!-- SECCION CURRICULUM -->
+    <div class="row">
     <section id="curriculum" class="curriculum">
         <div class="contenido-seccion">
             <h2>Curriculum</h2>
@@ -145,8 +146,13 @@
                         <span class="casa">Escuela de Educación Secundaria Técnica N°1</span>
                         <span class="fecha">2019 - 2024</span>
                         <p>Especializacion en Informatica (Armado y desarmado de una PC), Conocimiento de Software como Visual Studio, Notepad++, Photoshop y FL Studio; Conocimientos basicos de Sistemas DIgitales (Compuertas, Byts, Tabla de la verdad y Componentes). </p>
+                    </div>    
+                    </div>
+                    </div>
+                </div>
+            </div>
                         <div class="conectori">
-                            <div class="circuloi"></div>
+                            <div class="circuloi">
                         </div>
                     </div>
                     <div class="item izq">
@@ -208,7 +214,6 @@
                 </div>
                 <!-- Mapa -->
                 <div class="col">
-                    <img src="img/ubicacion.png" alt="">
                     <div class="info">
                         <ul>
                             <li>
@@ -236,8 +241,8 @@
             <i class="fa-solid fa-angles-up"></i>
         </a>
         <div class="redes">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://twitter.com/1kyox"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com/carlos.gabriel.04/"><i class="fa-brands fa-twitter"></i></a>
         </div>
     </footer>
 
