--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@
     </section>
 
     <!-- SECCION CURRICULUM -->
-    <div class="row">
     <section id="curriculum" class="curriculum">
         <div class="contenido-seccion">
             <h2>Curriculum</h2>
@@ -150,7 +149,6 @@
                     </div>
                     </div>
                 </div>
-            </div>
                         <div class="conectori">
                             <div class="circuloi">
                         </div>
@@ -241,8 +239,8 @@
             <i class="fa-solid fa-angles-up"></i>
         </a>
         <div class="redes">
-            <a href="https://twitter.com/1kyox"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.instagram.com/carlos.gabriel.04/"><i class="fa-brands fa-twitter"></i></a>
+            <a href="https://www.instagram.com/carlos.gabriel.04/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://twitter.com/1kyox"><i class="fa-brands fa-twitter"></i></a>
         </div>
     </footer>
 
