--- a/index.html
+++ b/index.html
@@ -147,18 +147,19 @@
                         <p>Especializacion en Informatica (Armado y desarmado de una PC), Conocimiento de Software como Visual Studio, Notepad++, Photoshop y FL Studio; Conocimientos basicos de Sistemas DIgitales (Compuertas, Byts, Tabla de la verdad y Componentes). </p>
                     </div>    
                     </div>
+                    <div class="conectord">
+                        <div class="circulod"></div>
                     </div>
-                
                     <div class="item izq">
                         <h4>Primario</h4>
                         <span class="casa">Colegio Santa Soledad Torres Acosta</span>
                         <span class="fecha">2009 - 2015</span>
                         <p>Conocimientos basicos en Materias como Informatica, Matematicas, Literatura, Ingles, Arte, Educacion fisica, etc.</p>
-                        <div class="conectori">
-                            <div class="circuloi"></div>
-                        </div>
                     </div>
-
+                </div>
+                <div class="conectord">
+                    <div class="circulod"></div>
+                </div>
                 <div class="col derecha">
                     <h3>Experiencia de trabajo</h3>
                     <div class="item der">
